--- a/hakkinda.html
+++ b/hakkinda.html
@@ -20,6 +20,6 @@
     <section>
         <h2>Site Hakkında</h2>
         <img src="it_2.jpeg" alt="Web Sitesi Kapak Görseli" width="600">
-        <p>Bu sitede bilgisayar ve temel elektronik için temeller atıyoruz. Senide aramıozda görmek isteriz.</p>
+        <p>Bu sitede bilgisayar ve temel elektronik için temeller atıyoruz. Senide aramızda görmek isteriz.</p>
     </section>
 </body>
