--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <nav>
             <ul>
                 <li><a href="hakkinda.html">Site Hakkında</a></li>
-                <li><a href="projeler.html">Projeler</a></li>
+                <li><a href="tanitimlar.html">Tanıtımlar</a></li>
                 <li><a href="haberler.html">Haberler</a></li>
+                <li><a href="urunler.html">Ürünler</a></li>
                 <li><a href="iletisim.html">İletişim</a></li>
             </ul>
         </nav>
