--- a/iletisim.html
+++ b/iletisim.html
@@ -20,6 +20,8 @@
         <p><strong>E-posta:</strong> bayramramazan270@gmail.comm</p>
         <p><strong>Instagram:</strong> @ramazanbyrm_</p>
         <p><strong>LinkedIn:</strong> linkedin.com/in/kullaniciadi</p>
+        <p><strong>Emeği Geçenler:</strong> Ebrar Nur AYDIN, Ramazan BAYRAM, Murat AYYILDIZ, Devrim KILIÇ </p>
+       <p>&copy; 2025 Kişisel Web Sitesi</p> 
     </section>
 </body>
 </html>
